Add DOM functionality in scripts.js

--- a/src/index.html
+++ b/src/index.html
@@ -63,26 +63,26 @@
         <section class="infoContainer-cardContainer-card-horizontal">
           <section class="horizontalCard-activity-container">
           <div class="card-today-activity">
-            <p id="activtyToday">PLACEHOLDER</p>
+            <p id="userStepsToday"></p>
           </div>
           <div class="card-today-activity">
-            <p id="activtyToday2">PLACEHOLDER</p>
+            <p id="avgStepsToday"></p>
           </div>
         </section>
         <section class="horizontalCard-activity-container">
         <div class="card-today-activity">
-          <p id="activtyToday">PLACEHOLDER</p>
+          <p id="userStairsToday"></p>
         </div>
         <div class="card-today-activity">
-          <p id="activtyToday2">PLACEHOLDER</p>
+          <p id="avgStairsToday"></p>
         </div>
       </section>
       <section class="horizontalCard-activity-container">
       <div class="card-today-activity">
-        <p id="activtyToday">PLACEHOLDER</p>
+        <p id="userMinutesToday"></p>
       </div>
       <div class="card-today-activity">
-        <p id="activtyToday2">PLACEHOLDER</p>
+        <p id="avgMinutesToday"></p>
       </div>
     </section>
   </section>
@@ -90,13 +90,13 @@
         <section class="horizontalCard-activity-container">
           <div class="card-history-activity">
             <p class="thisWeek">Activity: this week</p>
-            <ul class="card-vertical-list" id="activityThisWeek">
+            <ul class="card-vertical-list" id="userStepsThisWeek">
               <!-- Activity week list goes here -->
             </ul>
           </div>
           <div class="card-history-activity">
             <p class="thisWeek">Activity: this week</p>
-            <ul class="card-vertical-list" id="activityEarlierWeek">
+            <ul class="card-vertical-list" id="userStairsThisWeek">
               <!-- Activity week list goes here -->
             </ul>
           </div>
@@ -104,13 +104,13 @@
         <section class="horizontalCard-activity-container">
           <div class="card-history-activity">
             <p class="thisWeek">Activity: this week</p>
-            <ul class="card-vertical-list" id="activityThisWeek">
+            <ul class="card-vertical-list" id="userMinutesThisWeek">
               <!-- Activity week list goes here -->
             </ul>
           </div>
           <div class="card-history-activity">
             <p class="historicalWeek"></p>
-            <ul class="card-vertical-list" id="activityEarlierWeek">
+            <ul class="card-vertical-list" id="bestUserSteps">
               <!-- Activity week list goes here -->
             </ul>
           </div>
