Add last method to iteration 4

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,11 @@
                   <!-- friend list goes here -->
                 </ul>
               </section>
+              <div class="sidebar-header-line"></div>
+              <p class="thisWeek">Keep up the good work! You were increasinly active on these dates::</p>
+              <ul class="card-vertical-list" id="streakListMinutes">
+                <!-- friend list goes here -->
+              </ul>
             </section>
       </section>
     </section>
@@ -178,11 +183,12 @@
                 <ul class="card-vertical-list" id="friendChallengeListHistory">
                   <!-- friend list goes here -->
                 </ul>
-                <p class="thisWeek">You had 3 DAY STEP STREAKS on these days:</p>
-                <ul class="card-vertical-list" id="streakList">
-                  <!-- friend list goes here -->
-                </ul>
+                <div class="sidebar-header-line"></div>
               </section>
+              <p class="thisWeek">You had 3 DAY STEP STREAKS on these days:</p>
+              <ul class="card-vertical-list" id="streakList">
+                <!-- friend list goes here -->
+              </ul>
             </section>
       </section>
     </section>
