Add last method for iteration 4

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                 </ul>
               </section>
               <div class="sidebar-header-line"></div>
-              <p class="thisWeek">Keep up the good work! You were increasinly active on these dates::</p>
+              <p class="thisWeek">Keep up the good work! You were increasingly active on these dates:</p>
               <ul class="card-vertical-list" id="streakListMinutes">
                 <!-- friend list goes here -->
               </ul>
